--- a/app.html
+++ b/app.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <div class = sections>
-        <a href="music.html">Music</a>
+        <ul>
+            <li>
+                <a href="music.html">Music</a>
+            </li>
+            <li>
+                <a href="members.html">Members</a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
