--- a/music.html
+++ b/music.html
@@ -7,15 +7,23 @@
 </head>
 <body>
     <div class = albumTitle>
-        <h2>Color outside the lines</h2>>
+        <h2>Color outside the lines</h2>
     </div>
     <div class = "songs">
         <ul>
             <li>
                 <a href="go.html">GO!</a>
+            </li>
+            <li>
                 <a href="whatyouwant.html">What You Want</a>
+            </li>
+            <li>
                 <a href="fashion.html">Fashion</a>
+            </li>
+            <li>
                 <a href="joyride.html">Joyride</a>
+            </li>
+            <li>
                 <a href="lulluby.html">Lulluby</a>
             </li>
         </ul>
