I made the layout for the main page yay

--- a/app.html
+++ b/app.html
@@ -3,18 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.css">
     <title>Cortis</title>
 </head>
 <body>
+    <div class="topbar"> </div>
     <div class = sections>
-        <ul>
-            <li>
-                <a href="music.html">Music</a>
-            </li>
-            <li>
-                <a href="members.html">Members</a>
-            </li>
-        </ul>
+        <table style="width: 100%;">
+            <tr>
+                <td style="text-align: center;">
+                    <a href="music.html">Discography</a>
+                </td>
+                <td style="text-align: center;">
+                    <a href="members.html">Members</a>
+                </td>
+                <td style="text-align: center;">
+                    <a>Gallery</a>
+                </td>
+                <td style="text-align: center;">
+                    <a>Minigames</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div style="text-align: center;">
+        <p>This is cortis</p>
     </div>
 </body>
 </html>
