I made the layout for the members' page ^^

--- a/members.html
+++ b/members.html
@@ -3,37 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="app.css">
+    <title>Members</title>
 </head>
 <body>
     <div>
-        <ul>
-            <li>
-                <p>
+        <h1>
+            Members
+        </h1>
+    </div>
+    <div>
+        <img>
+        <map>
+            <area>
+        </map>
+    </div>
+    <div>
+        <table style="width: 100%;">
+            <tr>
+                <td style="text-align: center;">
                     <a href="martin.html">Martin</a>
-                </p>
-            </li>
-            <li>
-                <p>
-                    <a href="james.html">James</a>
-                </p>
-            </li>
-            <li>
-                <p>
+                </td>
+                <td style="text-align: center;">
                     <a href="juhoon.html">Juhoon</a>
-                </p>
-            </li>
-            <li>
-                <p>
+                </td>
+                <td style="text-align: center;">
                     <a href="seonhyeon.html">Seongyeon</a>
-                </p>
-            </li>
-            <li>
-                <p>
+                </td>
+                <td style="text-align: center;">
+                    <a href="james.html">James</a>
+                </td>
+                <td style="text-align: center;">
                     <a href="keonho.html">Keonho</a>
-                </p>
-            </li>
-        </ul>
+                </td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
