I added some image holders to visualise the pages

--- a/app.html
+++ b/app.html
@@ -24,6 +24,20 @@
                     <a>Minigames</a>
                 </td>
             </tr>
+            <tr>
+                <td style="text-align: center;"> 
+                    <img src="holder.png" alt="Discography image" style="width: 100px; height: 100px;">
+                </td>
+                <td style="text-align: center;">
+                    <img src="holder.png" alt="Members image" style="width: 100px; height: 100px;">
+                </td>
+                <td style="text-align: center;">
+                    <img src="holder.png" alt="Gallery image" style="width: 100px; height: 100px;">
+                </td>
+                <td style="text-align: center;">
+                    <img src="holder.png" alt="Minigames image" style="width: 100px; height: 100px;">
+                </td>
+            </tr>
         </table>
     </div>
     <div style="text-align: center;">
