--- a/members.html
+++ b/members.html
@@ -22,6 +22,23 @@
         <table style="width: 100%;">
             <tr>
                 <td style="text-align: center;">
+                    <img src="holder.png" alt="Martin" style="width: 100px; height: 100px;">
+                </td>
+                <td style="text-align: center;">
+                    <img src="holder.png" alt="Juhoon" style="width: 100px; height: 100px;">
+                </td>
+                <td style="text-align: center;">
+                    <img src="holder.png" alt="Seongyeon" style="width: 100px; height: 100px;">
+                </td>
+                <td style="text-align: center;">
+                    <img src="holder.png" alt="James" style="width: 100px; height: 100px;">
+                </td>
+                <td style="text-align: center;">
+                    <img src="holder.png" alt="Keonho" style="width: 100px; height: 100px;">
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align: center;">
                     <a href="martin.html">Martin</a>
                 </td>
                 <td style="text-align: center;">
