I added some images and fonts :)

--- a/app.html
+++ b/app.html
@@ -7,35 +7,37 @@
     <title>Cortis</title>
 </head>
 <body>
-    <div class="topbar"> </div>
-    <div class = sections>
+    <div class="topbar">
+        <h1 class="topbar-text">CORTIS</h1>
+    </div>
+    <div>
         <table style="width: 100%;">
             <tr>
                 <td style="text-align: center;">
-                    <a href="music.html">Discography</a>
+                    <a href="discography.html"><h1>Discography</h1></a>
                 </td>
                 <td style="text-align: center;">
-                    <a href="members.html">Members</a>
+                    <a href="members.html"><h1>Members</h1></a>
                 </td>
                 <td style="text-align: center;">
-                    <a>Gallery</a>
+                    <a><h1>Merch</h1></a>
                 </td>
                 <td style="text-align: center;">
-                    <a>Minigames</a>
+                    <a><h1>Minigames</h1></a>
                 </td>
             </tr>
             <tr>
                 <td style="text-align: center;"> 
-                    <img src="holder.png" alt="Discography image" style="width: 100px; height: 100px;">
+                    <img src="images/cortis music disc.png" alt="Discography image" style="width: 200px;">
                 </td>
                 <td style="text-align: center;">
-                    <img src="holder.png" alt="Members image" style="width: 100px; height: 100px;">
+                    <img src="images/cortis members.png" alt="Members image" style="width: 200px;">
                 </td>
                 <td style="text-align: center;">
-                    <img src="holder.png" alt="Gallery image" style="width: 100px; height: 100px;">
+                    <img src="images/merch.png" alt="Gallery image" style="width: 200px;">
                 </td>
                 <td style="text-align: center;">
-                    <img src="holder.png" alt="Minigames image" style="width: 100px; height: 100px;">
+                    <img src="images/console.png" alt="Minigames image" style="width: 200px;">
                 </td>
             </tr>
         </table>
