--- a/discography.html
+++ b/discography.html
@@ -8,24 +8,24 @@
 </head>
 <body>
     <div class = albumTitle>
-        <h2>Color outside the lines</h2>
+        <h2>Discography</h2>
     </div>
     <div class = "songs">
         <ul>
             <li>
-                <a href="go.html">GO!</a>
+                <a href="discography/go.html">GO!</a>
             </li>
             <li>
-                <a href="whatyouwant.html">What You Want</a>
+                <a href="discography/whatyouwant.html">What You Want</a>
             </li>
             <li>
-                <a href="fashion.html">Fashion</a>
+                <a href="discography/fashion.html">Fashion</a>
             </li>
             <li>
-                <a href="joyride.html">Joyride</a>
+                <a href="discography/joyride.html">Joyride</a>
             </li>
             <li>
-                <a href="lulluby.html">Lulluby</a>
+                <a href="discography/lulluby.html">Lulluby</a>
             </li>
         </ul>
     </div>
