Made some adjustments to the layout

--- a/app.html
+++ b/app.html
@@ -13,40 +13,47 @@
     </div>
 
     <div>
-        <table style="width: 100%;">
-            <tr>
-                <td>
-                    <a href="discography.html" class="text"><h1 id="discography-text">Discography</h1></a>
+        <table class="table">
+            <tr style="height: 20%;">
+                <td class="table-column">
+                    <a href="discography.html" class="table-text"><h1 id="discography-text">Discography</h1></a>
                 </td>
-                <td>
-                    <a href="members.html" class="text"><h1 id="members-text">Members</h1></a>
+                <td class="table-column">
+                    <a href="members.html" class="table-text"><h1 id="members-text">Members</h1></a>
                 </td>
-                <td>
-                    <a href="merch.html" class="text"><h1 id="merch-text">Merch</h1></a>
+                <td class="table-column">
+                    <a href="merch.html" class="table-text"><h1 id="merch-text">Merch</h1></a>
                 </td>
-                <td>
-                    <a href="minigames.html" class="text"><h1 id="minigames-text">Minigames</h1></a>
+                <td class="table-column">
+                    <a href="minigames.html" class="table-text"><h1 id="minigames-text">Minigames</h1></a>
                 </td>
             </tr>
-            <tr>
-                <td style="text-align: center;"> 
-                    <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 200px;">
+            <tr style="height: 80%;">
+                <td class="table-images"> 
+                    <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 220px;">
                 </td>
-                <td style="text-align: center;">
+                <td class="table-images">
                     <img id="members-image" src="images/members.png" alt="Members image" style="width: 210px;">
                 </td>
-                <td style="text-align: center;">
+                <td class="table-images">
                     <img id="merch-image" src="images/merch.png" alt="Merch image" style="width: 230px;">
                 </td>
-                <td style="text-align: center;">
+                <td class="table-images">
                     <img id="minigame-image" src="images/console.png" alt="Minigames image" style="width: 200px;">
                 </td>
             </tr>
         </table>
     </div>
 
-    <div style="text-align: center;">
-        <p>This is cortis</p>
+    <div style="padding-left: 400px; padding-right: 400px; text-align: center;">
+        <p>
+            CORTIS (코르티스) is a South Korean boy group formed by BigHit Music,
+            known for launching global acts like BTS and TOMORROW X TOGETHER. 
+            The group debuted on August 18, 2025, with the digital single "What You Want," 
+            marking BigHit's first boy group debut in six years 
+            The name CORTIS is derived from the phrase "Color Outside the Lines", symbolizing the group's 
+            commitment to creative freedom and breaking conventional norms
+        </p>
     </div>
 </body>
 </html>
