I changed the discography page a little bit

--- a/app.html
+++ b/app.html
@@ -30,22 +30,30 @@
             </tr>
             <tr style="height: 80%;">
                 <td class="table-images"> 
-                    <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 220px;">
+                    <a href="discography.html">
+                        <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 220px;">
+                    </a>
                 </td>
                 <td class="table-images">
-                    <img id="members-image" src="images/members.png" alt="Members image" style="width: 210px;">
+                    <a href="members.html">
+                        <img id="members-image" src="images/members.png" alt="Members image" style="width: 210px;">
+                    </a>
                 </td>
                 <td class="table-images">
+                    <a href="merch.html">
                     <img id="merch-image" src="images/merch.png" alt="Merch image" style="width: 230px;">
+                    </a>
                 </td>
                 <td class="table-images">
-                    <img id="minigame-image" src="images/console.png" alt="Minigames image" style="width: 200px;">
+                    <a href="minigames.html">
+                        <img id="minigame-image" src="images/console.png" alt="Minigames image" style="width: 200px;">
+                    </a>
                 </td>
             </tr>
         </table>
     </div>
 
-    <div style="padding-left: 400px; padding-right: 400px; text-align: center;">
+    <div class="start-info">
         <p>
             CORTIS (코르티스) is a South Korean boy group formed by BigHit Music,
             known for launching global acts like BTS and TOMORROW X TOGETHER. 
