--- a/discography.html
+++ b/discography.html
@@ -7,27 +7,35 @@
     <title>Discography</title>
 </head>
 <body>
-    <div class = albumTitle>
-        <h2>Discography</h2>
-    </div>
-    <div class = "songs">
-        <ul>
-            <li>
-                <a href="discography/go.html">GO!</a>
-            </li>
-            <li>
-                <a href="discography/whatyouwant.html">What You Want</a>
-            </li>
-            <li>
-                <a href="discography/fashion.html">Fashion</a>
-            </li>
-            <li>
-                <a href="discography/joyride.html">Joyride</a>
-            </li>
-            <li>
-                <a href="discography/lulluby.html">Lulluby</a>
-            </li>
-        </ul>
+    <div>
+        <table style="width: 100%;">
+            <tr>
+                <td style="width: 40%;">
+                    <img src="images/merch.png" alt="Album: Color Outside the box">
+                </td>
+                <td>
+                    <h1>Color outside the box</h1>
+                    <ul>
+
+                        <li>
+                            <a href="discography/go.html">GO!</a>
+                        </li>
+                        <li>
+                            <a href="discography/whatyouwant.html">What You Want</a>
+                        </li>
+                        <li>
+                            <a href="discography/fashion.html">Fashion</a>
+                        </li>
+                        <li>
+                            <a href="discography/joyride.html">Joyride</a>
+                        </li>
+                        <li>
+                            <a href="discography/lulluby.html">Lulluby</a>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
