I edited the songs's lyrics and changed the layout of multiple pages :)

--- a/app.html
+++ b/app.html
@@ -53,14 +53,17 @@
         </table>
     </div>
 
-    <div class="start-info">
+    <div class="start-info1">
         <p>
-            CORTIS (코르티스) is a South Korean boy group formed by BigHit Music,
-            known for launching global acts like BTS and TOMORROW X TOGETHER. 
-            The group debuted on August 18, 2025, with the digital single "What You Want," 
-            marking BigHit's first boy group debut in six years 
-            The name CORTIS is derived from the phrase "Color Outside the Lines", symbolizing the group's 
-            commitment to creative freedom and breaking conventional norms
+            CORTIS (코르티스) is a South Korean boy group formed by BigHit Music.<br>
+            They debuted on August 18, 2025, with the digital single "What You Want,"<br>
+            the lead track from their first extended play (EP), Color Outside the Lines.<br>
+        </p>
+    </div>
+    <div class="start-info2">
+        <p>
+            The name is derived from six letters taken from the phrase "Color Outside the Lines,"<br>
+            symbolizing the group's commitment to thinking freely and unconstrained by societal norms.
         </p>
     </div>
 </body>
