--- a/discography/fashion.html
+++ b/discography/fashion.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="song.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,58 +12,82 @@
             Fashion
         </h2>
         <p>
-            내 티, five bucks, 바지는 만원
-            My vision 몇 억s, 몇 조s, Bezos
-            동묘, what's up? 홍대, what's up? (워워)
-            I make 'em famous, I call that, "Fashion" (워워)
-            Fashion, fashion, fashion, fashion (워, let's go)
-            Fashion, fashion, fashion, fashion (what, what, what?)
-            내 티, five bucks, 바지는 만원
-            Let's get it (yeah), let's go, fashion, fashion (huh, huh)
-            안건호, 내가 산 옷 보고 뭐라고 말해도, 지켜 내 고집 (yeah)
-            후르츠 찜해 놓은 상품에 있었던 벨트는, now on my 허리, huh
-            Sorry, my granny, 요즘 왜 안 오니? 섭하신 동묘 할머니
-            여긴 비행기, huh, L.A.에서 앨범을 끝내고, 멋있게 돌아와, back on my swag
-            Huh, huh, 외화 talk, huh, 환율 올라 매일 (빠빠)
-            구제 판, got me looking fresh (빠빠)
-            Pull up, boys, 샥샥 긁어내 (skrrt, skrrt)
-            빈티지져스 (지져스)
-            동묘에서 모여, 마치 세미나
-            홍대에서 모여, 우린 set it off (set it off)
-            청-청-청담동 한가운데까지, spreading out (yeah, brr)
-            Squad is on the way, but we can't wrap it up (yeah)
-            내 티, five bucks, 바지는 만원
-            My vision 몇 억s, 몇 조s, Bezos
-            동묘, what's up? 홍대, what's up? (워워)
-            I make 'em famous, I call that, "Fashion" (워워)
-            Fashion, fashion, fashion, fashion (brr, let's go)
-            Fashion, fashion, fashion, fashion (what, what, what?)
-            내 티, five bucks, 바지는 만원 (yeah)
-            Let's get it, let's go (let's go), fashion, fashion
-            Yeah, 심장이 pop out, 첫눈에 바로 cop-cop
-            Okay, 구제 짬밥 삼만원짜리 잠바
-            Ay-yay-yay, feel like rock star, 확 met gala로 갈라, let's go
-            Top designers, 홍대 맛보고, 환장 fashion
-            Come and try, 동묘 생활에서, 난
-            체력을 많이 닦아 놔, mosh pit 하는 법 배워 놔
-            배워봐, 배워봐, 너도 빨리 배워 봐
-            옷 무덤 속 다시 태어나, 빈티지져스 came alive
-            동묘에서 모여, 마치 세미나
-            홍대에서 모여, 우린 set it off (set it off)
-            청-청-청담동 한가운데까지, spreading out (yeah, brr)
-            Squad is on the way, but we can't wrap it up (yeah, skrrt)
-            내 티, five bucks, 바지는 만원
-            My vision 몇 억s, 몇 조s, Bezos
-            동묘, what's up? 홍대, what's up? (워워)
-            I make 'em famous, I call that, "Fashion"
-            Fashion, fashion, fashion, fashion (워, let's go)
-            Fashion, fashion, fashion, fashion
-            Fashion, fashion, fashion, fashion (워, let's go)
-            Fashion, fashion, fashion, fashion (what, what?)
-            Fashion, fashion, fashion, fashion (let's go)
-            Fashion, fashion, fashion, fashion
-            Fashion, fashion, fashion, fashion (워, let's go)
-            Fashion, fashion, fashion, fashion (what? Fashion)
+            내 티, five bucks, 바지는 만원<br>
+            My vision 몇 억s, 몇 조s, Bezos<br>
+            동묘, what's up? 홍대, what's up? (워워)<br>
+            I make 'em famous, I call that, "Fashion" (워워)<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (워, let's go)<br>
+            Fashion, fashion, fashion, fashion (what, what, what?)<br>
+            내 티, five bucks, 바지는 만원<br>
+            Let's get it (yeah), let's go, fashion, fashion (huh, huh)<br>
+        </p>
+        <p>
+            안건호, 내가 산 옷 보고 뭐라고 말해도, 지켜 내 고집 (yeah)<br>
+            후르츠 찜해 놓은 상품에 있었던 벨트는, now on my 허리, huh<br>
+            Sorry, my granny, 요즘 왜 안 오니? 섭하신 동묘 할머니<br>
+            여긴 비행기, huh, L.A.에서 앨범을 끝내고, 멋있게 돌아와, back on my swag<br>
+        </p>
+        <p>
+            Huh, huh, 외화 talk, huh, 환율 올라 매일 (빠빠)<br>
+            구제 판, got me looking fresh (빠빠)<br>
+            Pull up, boys, 샥샥 긁어내 (skrrt, skrrt)<br>
+            빈티지져스 (지져스)<br>
+        </p>
+        <p>
+            동묘에서 모여, 마치 세미나<br>
+            홍대에서 모여, 우린 set it off (set it off)<br>
+            청-청-청담동 한가운데까지, spreading out (yeah, brr)<br>
+            Squad is on the way, but we can't wrap it up (yeah)<br>
+        </p>
+        <p>
+            내 티, five bucks, 바지는 만원<br>
+            My vision 몇 억s, 몇 조s, Bezos<br>
+            동묘, what's up? 홍대, what's up? (워워)<br>
+            I make 'em famous, I call that, "Fashion" (워워)<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (brr, let's go)<br>
+            Fashion, fashion, fashion, fashion (what, what, what?)<br>
+            내 티, five bucks, 바지는 만원 (yeah)<br>
+            Let's get it, let's go (let's go), fashion, fashion<br>
+        </p>
+        <p>
+            Yeah, 심장이 pop out, 첫눈에 바로 cop-cop<br>
+            Okay, 구제 짬밥 삼만원짜리 잠바<br>
+            Ay-yay-yay, feel like rock star, 확 met gala로 갈라, let's go<br>
+            Top designers, 홍대 맛보고, 환장 fashion<br>
+        </p>
+        <p>
+            Come and try, 동묘 생활에서, 난<br>
+            체력을 많이 닦아 놔, mosh pit 하는 법 배워 놔<br>
+            배워봐, 배워봐, 너도 빨리 배워 봐<br>
+            옷 무덤 속 다시 태어나, 빈티지져스 came alive<br>
+        </p>
+        <p>
+            동묘에서 모여, 마치 세미나<br>
+            홍대에서 모여, 우린 set it off (set it off)<br>
+            청-청-청담동 한가운데까지, spreading out (yeah, brr)<br>
+            Squad is on the way, but we can't wrap it up (yeah, skrrt)<br>
+        </p>
+        <p>
+            내 티, five bucks, 바지는 만원<br>
+            My vision 몇 억s, 몇 조s, Bezos<br>
+            동묘, what's up? 홍대, what's up? (워워)<br>
+            I make 'em famous, I call that, "Fashion"<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (워, let's go)<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion (워, let's go)<br>
+            Fashion, fashion, fashion, fashion (what, what?)<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (let's go)<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion (워, let's go)<br>
+            Fashion, fashion, fashion, fashion (what? Fashion)<br>
         </p>
     </div>
 </body>
