--- a/discography/go.html
+++ b/discography/go.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="song.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,52 +12,78 @@
             GO!
         </h2>
         <p>
-            우린 필요 없어 다른 sign
-            Paint the town, 초록색의 lights
-            페달에 발을 올려, 마치 bike
-            I just gotta get it
-            Watch me go, go, go, go, go, go
-            I just gotta get it
-            Watch me go, go, go, go, go, go
-            I just gotta get it
-            가져와 new beat, 가져와 new hit
-            가져와 new sheet, 만들어 new shit
-            가져와 new beat, 가져와 new hit
-            가져와 new sheet, I'm on the new shit
-            Drippy, 고장 난 듯 배수관이, yeah, yeah
-            불러와 new wave, Poseidon 같이 (uh, uh)
-            Martin (that's on fire), play that beat (that's on fire)
-            Yeah, 작업실에서 불을 피워, 밤도 대낮같이 (yeah)
-            우린 오늘 만들었지, and this track is so sick
-            레벨 좀 더 키워, 이 노래는 달려 도시를 (도시, yeah)
-            우린 필요 없어 다른 sign (okay, okay)
-            Paint the town, 초록색의 lights (yeah, lights)
-            페달에 발을 올려, 마치 bike (yeah, yeah)
-            I just gotta get it
-            Watch me go, go, go, go, go, go
-            I just gotta get it
-            Watch me go, go, go, go, go, go
-            I just gotta get it
-            어렸을 때부터, 난 동네서 좀 특이했어 (pow, pow, pow, pow, pow)
-            Yeah, 맘은 이미 pop-star back at 중이 때 (yeah, yeah, yeah, yeah)
-            우린 모자 눌러쓰고, new era 추진해 (ay, ay)
-            우릴 보고 엄지 들어, 모든 구시대, yeah
-            Watch me, I'm gon' spit it, pop and pop, 난 지금 hit mode
-            Hitman처럼, hit 만들고 싶어서 난 reload (reload)
-            치키치키, reload, uh-uh, reload (ay)
-            신호 주면, 바로 던져넣어, 마치 free throw
-            우린 필요 없어 다른 sign
-            Paint the town, 초록색의 lights
-            페달에 발을 올려, 마치 bike
-            I just gotta get it
-            Watch me go, go, go, go, go, go
-            I just gotta get it
-            Watch me go, go, go, go, go, go
-            I just gotta get it
-            가져와 new beat, 가져와 new hit
-            가져와 new sheet, 만들어 new shit
-            가져와 new beat, 가져와 new hit
-            가져와 new sheet, I'm on the new shit
+            우린 필요 없어 다른 sign<br>
+            Paint the town, 초록색의 lights<br>
+            페달에 발을 올려, 마치 bike<br>
+        </p>
+        <p>
+            I just gotta get it<br>
+            Watch me go, go, go, go, go, go<br>
+            I just gotta get it<br>
+            Watch me go, go, go, go, go, go<br>
+            I just gotta get it<br>
+        </p>
+        <p>
+            가져와 new beat,<br>
+            가져와 new hit<br>
+            가져와 new sheet,<br>
+            만들어 new shit<br>
+            가져와 new beat,<br>
+            가져와 new hit<br>
+            가져와 new sheet,<br>
+            I'm on the new shit<br>
+        </p>
+        <p>
+            Drippy, 고장 난 듯 배수관이, yeah, yeah<br>
+            불러와 new wave, Poseidon 같이 (uh, uh)<br>
+            Martin (that's on fire), play that beat (that's on fire)<br>
+            Yeah, 작업실에서 불을 피워, 밤도 대낮같이 (yeah)<br>
+            우린 오늘 만들었지, and this track is so sick<br>
+            레벨 좀 더 키워, 이 노래는 달려 도시를 (도시, yeah)<br>
+        </p>
+        <p>
+            우린 필요 없어 다른 sign (okay, okay)<br>
+            Paint the town, 초록색의 lights (yeah, lights)<br>
+            페달에 발을 올려, 마치 bike (yeah, yeah)<br>
+        </p>
+        <p>
+            I just gotta get it<br>
+            Watch me go, go, go, go, go, go<br>
+            I just gotta get it<br>
+            Watch me go, go, go, go, go, go<br>
+            I just gotta get it<br>
+        </p>
+        <p>
+            어렸을 때부터, 난 동네서 좀 특이했어 (pow, pow, pow, pow, pow)<br>
+            Yeah, 맘은 이미 pop-star back at 중이 때 (yeah, yeah, yeah, yeah)<br>
+            우린 모자 눌러쓰고, new era 추진해 (ay, ay)<br>
+            우릴 보고 엄지 들어, 모든 구시대, yeah<br>
+            Watch me, I'm gon' spit it, pop and pop, 난 지금 hit mode<br>
+            Hitman처럼, hit 만들고 싶어서 난 reload (reload)<br>
+            치키치키, reload, uh-uh, reload (ay)<br>
+            신호 주면, 바로 던져넣어, 마치 free throw<br>
+        </p>
+        <p>
+            우린 필요 없어 다른 sign<br>
+            Paint the town, 초록색의 lights<br>
+            페달에 발을 올려, 마치 bike<br>
+        </p>
+        <p>
+            I just gotta get it<br>
+            Watch me go, go, go, go, go, go<br>
+            I just gotta get it<br>
+            Watch me go, go, go, go, go, go<br>
+            I just gotta get it<br>
+        </p>
+        <p>
+            가져와 new beat,<br>
+            가져와 new hit<br>
+            가져와 new sheet,<br>
+            만들어 new shit<br>
+            가져와 new beat,<br>
+            가져와 new hit<br>
+            가져와 new sheet,<br>
+            I'm on the new shit<br>
         </p>
     </div>
 </body>
