--- a/discography/joyride.html
+++ b/discography/joyride.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
+    <link rel="stylesheet" href="song.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,42 +12,58 @@
             Joyride
         </h2>
         <p>
-            갇혀 이 건물 속에, 밤새
-            No sun, no sky 얼굴은 창백 all day
-            미쳐 난 flipping 마치 fried eggs, pancakes
-            Bloodshot eyes tonight 도망가, 여길 벗어나
-            'Cause, ooh
-            우리는 꿈꿔왔지, 찰나의 해방
-            달려, 부릉
-            트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)
-            이 자릴 떠, 지도는 집어치워 'cause we're on a joyride
-            더 세게 speed it up 지금 기분 so high
-            Driving so fast 가로질러 긴 밤
-            Day to night, ride, we're on a joyride
-            Yeah, yeah, yeah, we're on a joyride
-            Yeah, yeah, yeah, we're on a joyride
-            Driving so fast 가로질러 긴 밤
-            Day to night, ride, we're on a joyride
-            범생이는 나의 past tence
-            학교는 찍먹, 아지트로 came back
-            인생이 폭풍이면 난
-            내 drip 아래 춰 rain dance
-            종일 뛰었었지
-            폭주는 내 personality
-            (마치) MJ, ever since twenty-three
-            Rat snakes 담을 넘었지
-            'Cause, ooh
-            우리는 꿈꿔왔지, 찰나의 해방
-            달려, 부릉
-            트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)
-            이 자릴 떠, 지도는 집어치워 'cause we're on a joyride
-            더 세게 speed it up 지금 기분 so high
-            Driving so fast 가로질러 긴 밤
-            Day to night, ride, we're on a joyride
-            Yeah, yeah, yeah, we're on a joyride
-            Yeah, yeah, yeah, we're on a joyride
-            Driving so fast 가로질러 긴 밤
-            Day to night, ride, we're on a joyride
+            갇혀 이 건물 속에, 밤새<br>
+            No sun, no sky 얼굴은 창백 all day<br>
+            미쳐 난 flipping 마치 fried eggs, pancakes<br>
+            Bloodshot eyes tonight 도망가, 여길 벗어나<br>
+        </p>
+        <p>
+            'Cause, ooh<br>
+            우리는 꿈꿔왔지, 찰나의 해방<br>
+            달려, 부릉<br>
+            트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)<br>
+        </p>
+        <p>
+            이 자릴 떠, 지도는 집어치워 'cause we're on a joyride<br>
+            더 세게 speed it up 지금 기분 so high<br>
+            Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            범생이는 나의 past tence<br>
+            학교는 찍먹, 아지트로 came back<br>
+            인생이 폭풍이면 난<br>
+            내 drip 아래 춰 rain dance<br>
+        </p>
+        <p>
+            종일 뛰었었지<br>
+            폭주는 내 personality<br>
+            (마치) MJ, ever since twenty-three<br>
+            Rat snakes 담을 넘었지<br>
+        </p>
+        <p>
+            'Cause, ooh<br>
+            우리는 꿈꿔왔지, 찰나의 해방<br>
+            달려, 부릉<br>
+            트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)<br>
+        </p>
+        <p>
+            이 자릴 떠, 지도는 집어치워 'cause we're on a joyride<br>
+            더 세게 speed it up 지금 기분 so high<br>
+            Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
         </p>
     </div>
 </body>
