--- a/discography.html
+++ b/discography.html
@@ -3,36 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="discography.css">
     <title>Discography</title>
 </head>
 <body>
     <div>
-        <table style="width: 100%;">
-            <tr>
-                <td style="width: 40%;">
-                    <img src="images/merch.png" alt="Album: Color Outside the box">
+        <table style="width: 100%; height: 100vh;">
+            <tr style="height: 100%;">
+                <td style="width: 40%; text-align: center; vertical-align: middle;">
+                    <img src="images/album-cover.png" alt="Album: Color Outside the box" style="width: 400px;">
                 </td>
                 <td>
-                    <h1>Color outside the box</h1>
-                    <ul>
-
-                        <li>
-                            <a href="discography/go.html">GO!</a>
-                        </li>
-                        <li>
-                            <a href="discography/whatyouwant.html">What You Want</a>
-                        </li>
-                        <li>
-                            <a href="discography/fashion.html">Fashion</a>
-                        </li>
-                        <li>
-                            <a href="discography/joyride.html">Joyride</a>
-                        </li>
-                        <li>
-                            <a href="discography/lulluby.html">Lulluby</a>
-                        </li>
-                    </ul>
+                    <p><b>EP: </b>Color Outside the Box</p>
+                    <p><b>Release date: </b>August 18, 2025</p>
+                    <p><b>Genre: </b>K-pop, with influences from hip-hop, psychedelic rock, and Y2K aesthetics</p>
+                    <p><b>Songs: </b></p>
+                    <p><a href="discography/go.html" class="song-text">GO!</a></p>
+                    <p><a href="discography/whatyouwant.html" class="song-text">What You Want</a></p>
+                    <p><a href="discography/fashion.html" class="song-text">Fashion</a></p>
+                    <p><a href="discography/joyride.html" class="song-text">Joyride</a></p>
+                    <p><a href="discography/lulluby.html" class="song-text">Lulluby</a></p>
                 </td>
             </tr>
         </table>
