--- a/discography/lulluby.html
+++ b/discography/lulluby.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
+    <link rel="stylesheet" href="song.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,37 +12,49 @@
             Lulluby
         </h2>
         <p>
-            Ooh, ooh
-            Ooh, ooh
-            Ooh, ooh
-            I got work (ooh)
-            이미 추운데 a/c를 왜 켜? (whoa, oh)
-            빨개진 나의 눈과 시린 새벽 (ooh)
-            쓰러지지 않고 공을 세워
-            늘어가는 공의 숫자로 날 채워
-            잠을 자라는 말은 안 내켜
-            그래도 날 재워
-            Ooh, ooh
-            Ooh, it's a lullaby, it's a lullaby
-            지하에서 흘려보낸 계절
-            밤을 새워 시간들을 대여
-            방 한켠에 버린 나의 crayon
-            잠도 부족한데 꿈을 왜 꿔?
-            어차피 다 지나가는 세월
-            지나갔던 마음들을 세며
-            남은 친구들과 10대를 뎁혀
-            친구들은 내 편
-            Ooh, ooh
-            Ooh, it's a lullaby, it's a lullaby
-            I got work
-            You got work
-            But in this moment
-            Quiet first
-            I got work
-            You got work
-            But in this moment
-            Quiet first
-            It's a lullaby, it's a lullaby
+            Ooh, ooh<br>
+            Ooh, ooh<br>
+            Ooh, ooh<br>
+            I got work (ooh)<br>
+        </p>
+        <p>
+            이미 추운데 a/c를 왜 켜? (whoa, oh)<br>
+            빨개진 나의 눈과 시린 새벽 (ooh)<br>
+            쓰러지지 않고 공을 세워<br>
+            늘어가는 공의 숫자로 날 채워<br>
+            잠을 자라는 말은 안 내켜<br>
+            그래도 날 재워<br>
+        </p>
+        <p>
+            Ooh, ooh<br>
+            Ooh, it's a lullaby, it's a lullaby<br>
+        </p>
+        <p>
+            지하에서 흘려보낸 계절<br>
+            밤을 새워 시간들을 대여<br>
+            방 한켠에 버린 나의 crayon<br>
+            잠도 부족한데 꿈을 왜 꿔?<br>
+            어차피 다 지나가는 세월<br>
+            지나갔던 마음들을 세며<br>
+            남은 친구들과 10대를 뎁혀<br>
+            친구들은 내 편<br>
+        </p>
+        <p>
+            Ooh, ooh<br>
+            Ooh, it's a lullaby, it's a lullaby<br>
+        </p>
+        <p>
+            I got work<br>
+            You got work<br>
+            But in this moment<br>
+            Quiet first<br>
+            I got work<br>
+            You got work<br>
+            But in this moment<br>
+            Quiet first<br>
+        </p>
+        <p>
+            It's a lullaby, it's a lullaby<br>
         </p>
     </div>
 </body>
