I added the members' profiles

--- a/members/james.html
+++ b/members/james.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="app.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="members-profile.css">
+    <title>James Profile</title>
 </head>
 <body>
-    
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <img>
+                </td>
+                <td>
+                    <p><b>Stage Name: </b>James (제임스)</p>
+                    <p><b>Birth Name: </b>Zhao Yufan (趙雨凡)</p>
+                    <p><b>Position: </b>N/A</p>
+                    <p><b>Birthday: </b>October 14, 2005</p>
+                    <p><b>Zodiac Sign: </b>Libra</p>
+                    <p><b>Chinese Zodiac Sign: </b>Rooster</p>
+                    <p><b>Blood Type: </b>A</p>
+                    <p><b>MBTI Type: </b>INTP</p>
+                    <p><b>Nationality: </b>Thai-Chinese</p>
+                    <p><b>Representative Color: </b>Green</p>
+                    <p><b>Representative Emoji: </b>🦅 (Eagle)</p>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
