--- a/members/martin.html
+++ b/members/martin.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="members-profile.css">
+    <title>Martin Profile</title>
 </head>
 <body>
-    <div class="martin">
-        
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <img>
+                </td>
+                <td>
+                    <p><b>Stage Name: </b>Martin (마틴)</p>
+                    <p><b>Birth Name: </b>Martin Edwards (에드워드 마틴)</p>
+                    <p><b>Position: </b>Leader</p>
+                    <p><b>Birthday: </b>March 20, 2008</p>
+                    <p><b>Zodiac Sign: </b>Pisces</p>
+                    <p><b>Blood Type: </b>O</p>
+                    <p><b>MBTI Type: </b>INFP/ENFP</p>
+                    <p><b>Nationality: </b>Canadian-Korean</p>
+                    <p><b>Representative Color: </b>Red</p>
+                    <p><b>Representative Emoji: </b>🐕 (Dog – Italian Greyhound)</p>
+                </td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
