I added photos to the members' profile pages and made other layout changes ^^

--- a/members.html
+++ b/members.html
@@ -39,19 +39,19 @@
             </tr>
             <tr>
                 <td style="text-align: center;">
-                    <a href="members/martin.html">Martin</a>
+                    <a href="martin.html">Martin</a>
                 </td>
                 <td style="text-align: center;">
-                    <a href="members/juhoon.html">Juhoon</a>
+                    <a href="juhoon.html">Juhoon</a>
                 </td>
                 <td style="text-align: center;">
-                    <a href="members/seonhyeon.html">Seongyeon</a>
+                    <a href="seonhyeon.html">Seongyeon</a>
                 </td>
                 <td style="text-align: center;">
-                    <a href="members/james.html">James</a>
+                    <a href="james.html">James</a>
                 </td>
                 <td style="text-align: center;">
-                    <a href="members/keonho.html">Keonho</a>
+                    <a href="keonho.html">Keonho</a>
                 </td>
             </tr>
         </table>
