--- a/james.html
+++ b/james.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div>
-        <table>
-            <tr>
-                <td>
-                    <img>
+        <table style="width: 100%; height: 100vh;">
+            <tr style="height: 100%;">
+                <td style="width: 40%; text-align: center; vertical-align: middle;">
+                    <img src="images/james.png" alt="James" style="width: 470px;">
                 </td>
                 <td>
                     <p><b>Stage Name: </b>James (제임스)</p>
