--- a/juhoon.html
+++ b/juhoon.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div>
-        <table>
-            <tr>
-                <td>
-                    <img>
+        <table style="width: 100%; height: 100vh;">
+            <tr style="height: 100%;">
+                <td style="width: 40%; text-align: center; vertical-align: middle;">
+                    <img src="images/juhoon.png" alt="Juhoon" style="width: 260px;">
                 </td>
                 <td>
                     <p><b>Stage Name: </b>Juhoon (주훈)</p>
